--- a/scss/_header.scss
+++ b/scss/_header.scss
@@ -29,6 +29,17 @@ header {
 
 	.header-wrapper .logo {
 		margin-top: 17px;
+		background-image: url('../assets/logo.svg');
+		background-size: cover;
+	    width: 355px;
+	    height: 47px;
+	    background-repeat: no-repeat;
+
+	    @media screen and (max-width: 639px) {
+			background-image: url('../assets/logo-mobile.svg');
+			width: 300px;
+    		height: 40px;
+		}
 	}
 
 
