--- a/scss/_main.scss
+++ b/scss/_main.scss
@@ -102,5 +102,6 @@ body {
  		display: inline-block;
  		color: $carbon; 
  		background: rgba(202, 235, 242, .6);
+ 		line-height: 29px;
  	}
  }
